# defQA

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  defQA.mod  drag-and-drop-install.mel  pyproject.toml
def_qa/: __init__.py  run.py
def_qa/core/: animation_builder.py  animation_layer.py  attr_filter.py  bookmark.py  metadata.py  preset_builder.py  scanner.py  template_loader.py
def_qa/presets/: biped_common.yaml  biped_mgear.yaml  quadruped_mgear.yaml
def_qa/presets/overrides/: character_example.yaml
def_qa/ui/: __init__.py  attr_table_model.py  check_box_header.py  controller_tree_model.py  empty_state_view.py  gui_main.py  gui_main.qss  gui_main.ui  models.py  pair_mode_delegate.py  preset_dialog.py  qt_compat.py
def_qa/utils/: name_match.py  pair_detector.py
