[project]
name = "defQA"
version = "1.0.1"
description = "Maya check animation generation tool for rig QA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "ruff>=0.8",
]

[tool.pyright]
include = ["def_qa"]
extraPaths = ["."]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "def_qa/vendor",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportOptionalMemberAccess = false
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportArgumentType = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "def_qa/vendor",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["def_qa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
